--- a/src/components/settings/settings.component.html
+++ b/src/components/settings/settings.component.html
@@ -156,7 +156,7 @@
                 <div class="flex flex-col sm:col-span-2"><dt class="text-gray-400">Vencimento / Próxima Cobrança</dt><dd class="text-white font-medium">{{ (sub.current_period_end | date:'dd/MM/yyyy') || 'N/A' }}</dd></div>
               </div>
               <div class="mt-4 pt-4 border-t border-gray-700">
-                  <a href="https://chefos.koresolucoes.com.br/#/auth/portal" target="_blank" class="w-full text-center block bg-blue-600/80 hover:bg-blue-600 text-white font-semibold py-2 px-4 rounded-lg">
+                  <a href="https://www.chefos.shop/#/account" target="_blank" class="w-full text-center block bg-blue-600/80 hover:bg-blue-600 text-white font-semibold py-2 px-4 rounded-lg">
                       Gerenciar Assinatura
                   </a>
               </div>
